# heatmapx

./: .gitignore  .python-version  LICENSE  README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yaml  test_pull_requests.yaml  test_pull_requests.yml
examples/: Working with Geospatial Data.ipynb
heatmapx/: __init__.py  _experimental_heating.py  _thermograph.py
tests/: conftest.py  heatmapx_test.py
