[tool.poetry]
name = "heatmapx"
version = "0.2.0"
description = "Flexible, intuitive heatmap creation on Network X graphs"
authors = ["drmrd"]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.4.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
GitPython = "^3.0.5"
pytest = "^6.2.5"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "^7.11.1"
jupyter = "^1.0.0"
matplotlib = "^3.1.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
